--- a/sass/_block-story.scss
+++ b/sass/_block-story.scss
@@ -38,7 +38,7 @@
       background-position: 10px center;
       display: inline-block;
       height: 23px;
-      background-size: auto 12px;
+      background-size: 25px 12px;
       width: 100%;
       margin-top: 0;
       background-color: $color-dark-transparent;
@@ -47,6 +47,7 @@
       font-size: $font-size-small;
       line-height: 1em;
       padding:3px 0 0 47px;
+      background-position:13px;
     }
   }
 
